[gd_scene load_steps=3 format=3 uid="uid://daunihy14ll4g"]

[ext_resource type="Script" path="res://scripts/utils/icon_button.gd" id="1_yjj24"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lp2mb"]
bg_color = Color(0, 0, 0, 0)

[node name="IconButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(5, 5)
script = ExtResource("1_yjj24")
hover_color = Color(0, 0, 0, 0.27451)
clicked_color = Color(0, 0, 0, 0.392157)

[node name="Icon" type="TextureRect" parent="."]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3

[node name="Tint" type="Panel" parent="Icon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lp2mb")

[connection signal="mouse_entered" from="Icon" to="." method="_on_icon_mouse_entered"]
[connection signal="mouse_exited" from="Icon" to="." method="_on_icon_mouse_exited"]
